--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+v0.12.10
+
+* Compatibilidad del fuente mainwindow.cpp para Qt 5.7.1 (Qt Creator 4.2.0, GCC 6.3.0)
+
+
 v0.12.9
 
 * Fix Only audio 
