--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,9 +1,10 @@
-<unreleased>
+v0.12.17
 
 + Added support for YouTube download (youtube.com, youtu.be, m.youtube.com).
 * It is only necessary to configure Picta username and password for Playlist downloads, whether from the site or personal.
 * Updated Frequently Asked Questions and Answers (F.A.Q)
   Explains how to use the GUI in 32-bit versions of Windows
+* Add Spec for openSUSE in deployment
 
 
 v0.12.16
