--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,9 @@
-<unreleased>
+v0.12.21
+* Update make_installer.sh for Installer Binary Online on Windows
++ Add Repository Online to GH-Pages
+
+
+v0.12.20
 + Add make_installer.sh for Installer Binary Offline on Windows
 + Add dependencies to installer Offline
 + Add Shortcut and RunProgram to installer Offline 
