--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+v0.12.28
++ Integrate QDarkStyleSheet Dark/Light Theme
+* Update picta-dl resource to version 2021.5.21.1
+
+
 v0.12.27
 * Fix save ffmpeg_conf when the configuration file is created
 
